# ms-asr

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  test_client.py
ms-asr-gateway/: Dockerfile  pyproject.toml
ms-asr-gateway/src/asr_gateway/: asr_client.py  audio_chunker.py  audio_store.py  config.py  grpc_service.py  main.py  pipeline.py  post_processor.py  session.py  vad.py  ws_handler.py
ms-asr-model/: Dockerfile  pyproject.toml
ms-asr-model/src/asr_model/: config.py  grpc_service.py  main.py  model.py
protos/: asr_gateway.proto  asr_model.proto  generate.sh
